# historicli

./: .gitignore  README.md  pyproject.toml  setup.py
historicli/: main.py  matchers.py  timeline.csv
hs/: groups.csv  main.py  matchers.py  periods.csv  periods_bu.csv  timeline.csv
src/timeline/: config.ini  groups.csv  main.py  periods.csv  periods_bu.csv  timeline.csv
